# manus-api-workshop

./: .env.example  .gitignore  1.Basics.ipynb  2. Files.ipynb  2. Files.md  3. Webhooks.ipynb  4. Slack.ipynb  5. Support Bot.ipynb  5. Support Bot.md  LICENSE  README.md  convert_notebook.py  pyproject.toml  server.py  webhook.py
01-basics/: README.md  solution.py  starter.py
02-file-handling/: README.md  solution.py  starter.py
03-webhooks/: README.md  solution.py  webhook-handler.py
04-complete-workflow/: README.md  config.py  workflow.py
data/: rick_and_morty_characters.json  transcript.json
lib/: __init__.py  env.py  task.py
md/: 1.Basics.md  2. Files.md  3. Webhooks.md  4. Slack.md
notebooks/: 01-basics.ipynb  02-files.ipynb
