[project]
name = "manus-api-webhook-workshop"
version = "0.1.0"
description = "Learn how to use the Manus API - Workshop materials and examples"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.31.0",
    "openai>=2.8.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
]
